powo-portal/src/main/frontend/src/sass/components/_article.scss
//
// Article
// --------------------------------------------------

body {
  position: relative;
}

.c-article {
  a {
    color: #4949a3;
    &.collapser {
      color: #333333;
    }
  }
  .mobile-menu {
    background-color: #f2f9f9;
    padding: .75rem 1.25rem;
    border: 1px solid #008285;
    border-width: 1px 0;
    svg {
        right: 29px;
        top: 17px;
        position: absolute;
    }
  }
}

// Component - Article Header
.c-article-header {
  border-top: 2px solid #e7e7e7;
  border-bottom: 2px solid #e7e7e7;

  > .container {
    display: table;
    width: 100%;
  }
}


// Component - Summary
.c-summary {

  padding: $padding-large-vertical;
  vertical-align: top;

  @media (min-width: $screen-md-min) {
    display: table-cell;

    ol ol {
      margin-left: 1.5em;
    }

    p {
      margin-left: 1.5em;
    }

  }

  ol {
    margin: 0.5em 0 0;
    padding: 0;
    list-style: none;
  }
}

.c-summary__heading {
  margin: 0;
  font-size: $font-size-h2;
  @media (min-width: $screen-lg-min) {
    font-size: $font-size-h1;
  }

  small {
    color: #333;
    font-size: $font-size-h4;
  }
}

.c-gallery-header {
  height: 250px;
  background-size: cover;
  background-position: center;
  display: block;

  @media (min-width: $screen-sm-min) {
    height: 400px;
  }

  @media (min-width: $screen-md-min) {
    width: 50%;
    display: table-cell;
  }
}


// Component - Article Navigation
.c-article-nav {
  background-color: $body-bg;
  border-bottom: 2px solid #CCCCCC;
  padding: 0;
//  &.affix {
//    top: 0;
//    width: 100%;
//    background-color: #FFFFFF;
//    // z-index: $zindex-navbar;
//    position: sticky;
//    margin-left: -15px;
//    padding: 0 15px;
//  }
}


// Component - Article Section
.c-article-section {
  padding: 0 2em 0;
  border-bottom: 1px solid #EEEEEE;
  @media (min-width: $screen-md-min) {
    padding: 2em 0;
  }
  @media (max-width: $screen-sm-min) {
    padding: 0 0.5em 0 0;
  }
}

.c-article-section__content {


  @include make-md-column(9);
  @include make-lg-column(9);

  margin-top: 2em;

  @media (min-width: $screen-md-min) {
    float: right!important;
  }

  // Establish a baseline for all content in sections.
  > {
    h2, h3, h4, h5, h6 {
      margin-top: 0;
      margin-bottom: 2rem;
      font-weight: bold;
    }
  }
  > div {
    margin-bottom: 3rem;
  }
  ul, ol, p, cite, span {
    margin-top: 0;
    margin-bottom: 3rem;
  }
}

.c-article-section__title {
  h2 {
    font-weight: bold;
  }
}

.c-article-section__aside {

  @include make-md-column(3);
  @include make-lg-column(3);
  .glyphicon {
    margin-right: 0.5em;
  }
  .includes_data {
    width: 75%;
  }
}

#determinations {
  table {
    display: table;
    width: 100%;
  }

  thead, tbody {
    float: left;
    width: 100%;
  }

  tbody {
    overflow-y: auto;
    height: 300px;
  }

  tr {
    width: 100%;
    display: table;
    text-align: left;
  }

  th, td {
    &:nth-child(1) { width: 12% }
    &:nth-child(2) { width: 40% }
    &:nth-child(3) { width: 20% }
    &:nth-child(4) { width: 14% }
    &:nth-child(5) { width: 14% }
  }
}

// Component - Lists
%unstyled-list {
  margin: 0;
  padding: 0;
  list-style: none;
}

.c-plain-list {
  @extend %unstyled-list;
}

.c-reference-list {
  @extend %unstyled-list;
  > li {
    display: inline-block;
  }
}

.c-synonym-list {
  @extend %unstyled-list;
}

.c-distribution-list {
  @extend %unstyled-list;
}

@media (min-width: $screen-sm-min) {
  .two-col {
    @include content-columns(2);
    li:first-of-type:last-of-type {
      display: inline-block;
    }
  }
}

li {
  -webkit-column-break-inside: avoid;
  page-break-inside: avoid;
  break-inside: avoid;
}


// Navbar - Styling for article.

.navbar--article {
  z-index: 1;
  position: sticky;
  top: 0;
  @media (min-width: $screen-md-min) {
    display: block;
  }
  .navbar-nav--article {

    width: 100%;

    @media (min-width: $screen-sm-min) {
      display: flex;
      align-content: center;
      justify-content: space-between;
      float: none;
    }

    > li {
      flex-grow: 1;
      text-align: center;
    }

    > li > a {
      font-size: 13px;
      padding: ($navbar-padding-vertical * 2) 0;
      @media (min-width: $screen-md-min) {
        font-size: 15px;
        padding: ($navbar-padding-vertical * 2) ($navbar-padding-horizontal);
      }
    }
  }
}

@media (min-width: $screen-sm-min) {
  .navbar-expand-lg .navbar-toggler {
      display: none;
  }
}

#descriptions {
  dl {
    h2 {
      font-size: $font-size-h3;
      margin-top: 0;
    }

    h3 {
      font-size: $font-size-h5;
      font-weight: bold;
    }
  }

  dd {
    padding-bottom: .5em;
  }

  tr {
    border-bottom: 1px solid #ccc;
  }

  td, th {
    padding: 5px;
  }

  thead {
    font-style: italic;
  }

  tbody td:first-child {
    font-style: italic;
  }
}

.mfp-title a {
  color: #dcdcdc;
  text-decoration: underline;
}

